<resources>
    <string name="app_name">Flower Loan</string>
    <string name="language">en</string>
    <string name="word_dial">Dial</string>
    <string name="word_copy">Copy</string>
    <string name="word_customer_service">Customer Service</string>
    <string name="word_customer_service_tips">Tips</string>
    <string name="word_next">Next</string>
    <string name="word_enter">Enter</string>
    <string name="tab_home">Home</string>
    <string name="tab_data_safety">Data safety</string>
    <string name="tab_personal_center">Account</string>
    <string name="word_days">days</string>
    <string name="word_cancel">Cancel</string>
    <string name="word_submit">Submit</string>
    <string name="word_delete">Delete</string>
    <string name="word_login">Log in>></string>
    <string name="word_input_tip">Please check the input</string>
    <string name="word_query_progress">Query Progress</string>
    <string name="word_submit_success">submit successfully</string>
    <string name="word_copy_success">Successful replication.</string>
    <string name="customer_service_hotline">Customer service hotline</string>
    <string name="customer_service_email">Customer service Email</string>
    <string name="launch_permissions">App requires phone, camera, location, contact, storage permissions</string>
    <string name="launch_permissions_camera">App requires camera permissions</string>
    <string name="launch_permissions_phone">App requires phone permission.</string>
    <string name="launch_permissions_sms">App requires sms permission.</string>
    <string name="customer_service_tip">Customer service telephone online hours are Monday to Sunday,9:00am to 6:30pm.</string>
    <string name="diaolg_loading_text">Loading…</string>
    <string name="activity_login_select_country">Select my country</string>
    <string name="activity_login_enter_phone_num">Enter the phone number</string>
    <string name="activity_login_enter_phone_num_ksh">Enter the phone number linked with your M-PESA account</string>
    <string name="activity_login_enter_ver_code">A 4-digit verification code has been sent to your mobile phone </string>
    <string name="activity_login_ver_code_hint">4-digit verification code</string>
    <string name="activity_login_enter_resend_code"><u>Resend Code</u></string>
    <string name="activity_login_ver_code_send_tip">The verification code has been sent.</string>
    <string name="activity_login_phone_num_title">Sign in</string>
    <string name="activity_apply_permission_title">Information acquisition notice</string>
    <string name="activity_apply_permission_text">To access your eligibility and facilitate faster disbursal of your loan, we need permissions to access your Camera, Contact, Location, Phone, Storage and SMS.</string>
    <string name="activity_apply_permission_sms">SMS</string>
    <string name="activity_apply_permission_sms_text">COLLECTION OF SMS DATA:\nPurpose of Permission: As an important part of our loan process, our app reads your Financial SMS information. This helps us identify bank accounts you may hold, cash flow patterns and amounts you transact as a user. To detect, combat and prevent fraud, attempted fraud, money laundering or other illegal use of our services, we will determine your fraud risk and financial situation. You can choose to agree or deny permission, when you refuse permission will mean lack of SMS information and inability to assess your risk and credit.\n\nType of Data Collect: We only monitor financial SMS, including the sender, description and date sent in the user\'s inbox, which helps us identify the various accounts the user owns and the flow patterns of cash held by the user. We also collect and process telephone data such as SMS logs.\n\nSecurity of Data: We encrypt and transmits your Financial SMS information to our server https://www.flowerloan.info using the HTTPS protocol. We promise not to share data with the third parties without your permission.</string>
    <string name="activity_apply_permission_contacts">CONTACTS</string>
    <string name="activity_apply_permission_contacts_text">COLLECTION OF CONTACT LIST:\nPurpose of Permission: As an important part of our loan process, we require you to provide references in your loan application. We identify your social network from your contact list and identify fraudulent contacts in your social network, which helps us detect fraudulent loan applications and reduce credit risk. And as a part of our loan journey,we require references from the loan applicant. In this regard, during filling the form on our app, we collect your contact information to detect close contacts which enable you to fill the data automatically. You can choose to agree or deny permission.\n\nType of Data Collect: We collect your contacts list and information which includes name, phone numbers, account type, contact last modified, favorites (starred) and other optional data like relationship and structural address to enrich your financial profile. We collect contact information only after obtaining your additional explicit consent.\n\nSecurity of Data: We encrypt your information and upload it to our server https://www.flowerloan.info using a secure HTTPS protocol and we promise not to share it with third parties without your consent. We will delete the contacts information after we have determined your risk profile.</string>
    <string name="activity_apply_permission_phone">PHONE</string>
    <string name="activity_apply_permission_phone_text">Collect and monitor specific information about your device including your hardware model,operating system and version,unique device identifier,user profile information,wifi information,mobile network information to uniquely identify the devices and ensure that unauthorized devices are not able to act on your behalf helping us prevent fraud.</string>
    <string name="activity_apply_permission_next_btn">Ok\,Let\'s GO</string>
    <string name="activity_apply_permission_agreement_1">By continuing,your agree to the Term of&#160;</string>
    <string name="activity_apply_permission_agreement_2">Service&amp;Privacy Policy</string>
    <string name="activity_apply_permission_agreement_3">&#160;and receive communications via SMS and Email.</string>
    <string name="fragment_loan_main_loan_amount">Loan amount</string>
    <string name="fragment_loan_main_apply_btn">APPLY NOW</string>
    <string name="fragment_loan_main_tip_1">1.Submit\ninformation</string>
    <string name="fragment_loan_main_tip_2">2.Confirm\nyour loan need</string>
    <string name="fragment_loan_main_tip_3">3.Get\nyour money</string>
    <string name="fragment_loan_main_tip">Maintain good loan record will continue to increase loan amount.</string>
    <string name="activity_loan_apply_loan_amount">Loan amount</string>
    <string name="activity_loan_apply_loan_term">Loan term</string>
    <string name="activity_loan_apply_disburse_amount">Disburse amount</string>
    <string name="activity_loan_apply_service_fee">Service fee</string>
    <string name="activity_loan_apply_repayment_amount">Repayment amount</string>
    <string name="activity_loan_apply_interest">Interest</string>
    <string name="activity_loan_apply_overdue_penalty_interest">Overdue penalty interest</string>
    <string name="activity_loan_apply_btn">Confirm application</string>
    <string name="activity_loan_apply_rate_suffix">% per day</string>
    <string name="fragment_loan_review_title">Your loan application is under review</string>
    <string name="fragment_loan_review_text">Loan approval takes 5–20 minutes. Customer service may also contact you by phone, so please make sure the phone is accessible.</string>
    <string name="fragment_loan_review_refresh_status">Refresh status</string>
    <string name="fragment_loan_review_loan_detail_title">Your loan application</string>
    <string name="fragment_loan_review_loan_amount">Loan amount</string>
    <string name="fragment_loan_review_loan_term">Loan term</string>
    <string name="fragment_loan_review_receiving_account_title">Loan receiving account</string>
    <string name="fragment_loan_review_receiving_account_text">Once the loan is approved, the loan will be transferred to one of your available account.</string>
    <string name="fragment_loan_review_receiving_account_tip" translatable="false">Indice important : Après l\'approbation de votre prêt, vous recevrez généralement le transfert de prêt dans les 24 heures. Veuillez prêter attention aux rappels SMS pertinents. En raison de la coopération des opérateurs de paiement (Wave/orange money/MTN/MOOV), le délai de transfert de votre prêt vers vous peut être retardé. Veuillez patienter ou contacter le service client pour plus d\'informations.</string>
    <string name="fragment_loan_loaning_title">Your loan application has been approved</string>
    <string name="fragment_loan_loaning_text">The loan will be transferred to your account.</string>
    <string name="loan_tip_title">Settle the loan on time</string>
    <string name="loan_tip_1">You will be able to apply for loan again immediately</string>
    <string name="loan_tip_2">Loan limit will be inscreased.</string>
    <string name="loan_overdue_tip_title">Serious overdue will result in</string>
    <string name="loan_overdue_tip_1">Your credit is damaged and you will no longer be able to get loan.</string>
    <string name="loan_overdue_tip_2">If you are seriously overdue, you will face litigation, which will result in high litigation costs for you.</string>
    <string name="fragment_loan_fail_title">Your loan application failed!</string>
    <string name="fragment_loan_fail_text_1">Please apply again after&#160;</string>
    <string name="fragment_loan_fail_text_2">&#160;days later.</string>
    <string name="fragment_repay_total_repayment">Total repayment</string>
    <string name="fragment_repay_due_date">Due date</string>
    <string name="fragment_repay_loan_amount">Loan amount</string>
    <string name="activity_service_feedback_filter_startups">Filter Startups</string>
    <string name="activity_service_feedback_product_suggestion">Product suggestion</string>
    <string name="activity_service_feedback_app_bugs">App bugs</string>
    <string name="activity_service_feedback_payment_issues">Payment issues</string>
    <string name="activity_service_feedback_others">Others</string>
    <string name="activity_service_feedback_input_title">*Briefly describe your feedback</string>
    <string name="activity_service_feedback_input_hint">Enter your feedback…</string>
    <string name="view_add_bank_account_cote_title" translatable="false">Où voulez-vous que votre prêt soit transféré*</string>
    <string name="view_add_bank_account_cote_add_btn" translatable="false">Ajouter</string>
    <string name="view_add_bank_account_cote_text" translatable="false">Veuillez ajouter votre portefeuille électronique mobile pour recevoir votre prêt\n\nAfin de vous assurer que vous pouvez recevoir le prêt, veuillez ajouter autant de portefeuilles mobiles que possible pour éviter le problème de la limite affectant le transfert du prêt vers vous.</string>
    <string name="flower_confirm">Confirm</string>
    <string name="operated_company_desc">This App is operated by</string>
    <string name="ocr_title">Identity verification</string>
    <string name="ocr_select_type_title">Please document type</string>
    <string name="ocr_type_1">National ID card</string>
    <string name="ocr_1_desc_front">Photo of the front of the identity card</string>
    <string name="ocr_1_desc_back">Photo of the back of the identity card</string>
    <string name="delete_data_desc">After deleting the data, this numberwill not be able to log in and yourpersonal data will be cleared.\n\nIf you need to use it again, pleaseregister with another number.</string>
    <string name="delete_data_title">Confirm to delete data?</string>
    <string name="btn_return">Return</string>
</resources>