<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.test.aoner.fanow.test.activity_fragment_flower.ServiceFeedbackActivity_flower">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:orientation="vertical">

            <com.test.aoner.fanow.test.view_flower.widget_flower.TitleView_flower
                android:id="@+id/activity_service_feedback_view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/activity_service_feedback_filter_startups"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp"
                    android:layout_marginHorizontal="20dp">

                    <TextView
                        android:id="@+id/activity_service_feedback_tv_product_suggestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_bg_input"
                        android:paddingVertical="8dp"
                        android:paddingHorizontal="16dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/activity_service_feedback_product_suggestion"/>

                    <TextView
                        android:id="@+id/activity_service_feedback_tv_app_bugs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_bg_input"
                        android:paddingVertical="8dp"
                        android:paddingHorizontal="16dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_marginStart="10dp"
                        android:text="@string/activity_service_feedback_app_bugs"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="9dp"
                    android:layout_marginHorizontal="20dp">

                    <TextView
                        android:id="@+id/activity_service_feedback_tv_payment_issues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_bg_input"
                        android:paddingVertical="8dp"
                        android:paddingHorizontal="16dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:text="@string/activity_service_feedback_payment_issues"/>

                    <TextView
                        android:id="@+id/activity_service_feedback_tv_others"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_bg_input"
                        android:paddingVertical="8dp"
                        android:paddingHorizontal="16dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:layout_marginStart="10dp"
                        android:text="@string/activity_service_feedback_others"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginHorizontal="20dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/activity_service_feedback_input_title"/>

                <EditText
                    android:id="@+id/activity_service_feedback_et_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginHorizontal="20dp"
                    android:padding="14dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:background="@drawable/ic_bg_input"
                    android:hint="@string/activity_service_feedback_input_hint"
                    tools:ignore="Autofill,TextFields" />


            <Button
                android:id="@+id/activity_service_feedback_btn_submit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/ic_bg_btn"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:text="@string/word_submit"/>

            <LinearLayout
                android:id="@+id/activity_service_feedback_view_operated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="18dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="20dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/activity_service_feedback_iv_operated_logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray_d"
                        android:textSize="14sp"
                        android:text="@string/operated_company_desc"
                        android:fontFamily="sans-serif-medium"/>

                    <TextView
                        android:id="@+id/activity_service_feedback_tv_company_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:fontFamily="sans-serif-black"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>