<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:lineSpacingExtra="5dp"
        android:gravity="center"
        android:text="@string/view_add_bank_account_cote_title"/>

    <LinearLayout
        android:id="@+id/view_add_bank_account_cote_layout_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:orientation="vertical" />

    <LinearLayout
        android:id="@+id/view_add_bank_account_cote_layout_add_account_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:paddingVertical="14dp"
        android:background="@drawable/ic_round_corner_green_l_10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_add"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginStart="12dp"
            android:textStyle="bold"
            android:text="@string/view_add_bank_account_cote_add_btn"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_ddd"
        android:textSize="14sp"
        android:text="@string/view_add_bank_account_cote_text"
        android:layout_marginTop="15dp"
        android:lineSpacingExtra="4dp"/>

</LinearLayout>