<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.test.aoner.fanow.test.activity_fragment_flower.info_flower.OcrUploadActivity_flower">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <com.test.aoner.fanow.test.view_flower.widget_flower.TitleView_flower
                android:id="@+id/activity_ocr_upload_view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                app:isWhiteStyle="false"
                app:title="@string/ocr_title" />

            <com.test.aoner.fanow.test.view_flower.widget_flower.SelectView_flower
                android:id="@+id/activity_ocr_upload_sv_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/ocr_type_1"
                app:title="@string/ocr_select_type_title"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:background="@drawable/ic_round_corner_white_12dp"
                android:orientation="horizontal"
                android:paddingVertical="14dp"
                android:paddingHorizontal="9dp"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="16dp"
                tools:ignore="DisableBaselineAlignment">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/activity_ocr_upload_iv_img_1"
                        android:layout_width="140dp"
                        android:layout_height="90dp"
                        android:src="@drawable/bg_ocr_front"
                        android:scaleType="centerInside"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/activity_ocr_upload_tv_desc_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/ocr_1_desc_front"
                        android:gravity="center"
                        android:lineSpacingExtra="2dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/activity_ocr_upload_view_img_2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/activity_ocr_upload_iv_img_2"
                        android:layout_width="140dp"
                        android:layout_height="90dp"
                        android:src="@drawable/bg_ocr_back"
                        android:scaleType="centerInside"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/activity_ocr_upload_tv_desc_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/ocr_1_desc_back"
                        android:gravity="center"
                        android:lineSpacingExtra="2dp"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/activity_ocr_upload_btn_submit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/ic_bg_btn"
                android:text="@string/word_submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:id="@+id/activity_ocr_upload_view_operated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="18dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="20dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/activity_ocr_upload_iv_operated_logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray_d"
                        android:textSize="14sp"
                        android:text="@string/operated_company_desc"
                        android:fontFamily="sans-serif-medium"/>

                    <TextView
                        android:id="@+id/activity_ocr_upload_tv_company_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:fontFamily="sans-serif-black"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>